Eloborated on the AdaBoost algorithm

--- a/projects/p1_charityml/finding_donors.ipynb
+++ b/projects/p1_charityml/finding_donors.ipynb
@@ -3319,7 +3319,7 @@
     "\n",
     "AdaBoost is based on decision trees. One can think of decision trees the same way humans think in order to classify something where each tree is a simple question that will greatly reduce the number of possibilities. Kind of like the game 21 questions.\n",
     "\n",
-    "A decision tree is a very simple way to classify and AdaBoost combines many of these simple trees in order to make one strong algorithm. The only requirement is that the simple trees must provide slightly more precision than pure guess. Each tree is called a weak leraner and AdaBoost weighs each learner based on how good it performs to create one strong learner. "
+    "A decision tree is a very simple way to classify and AdaBoost combines many of these simple trees in order to make one strong algorithm. The only requirement is that the simple trees must provide slightly more precision than pure guess. Each tree is called a weak learner. AdaBoost will increase the weigths on all points who were not correctly classified in each iteration thus the next weak learner will focus on misclassified points from the last iteration. At last AdaBoost will create one strong classifier out of all the weak learners and weigh them based on their error rate."
    ]
   },
   {
